--- a/todolist.css
+++ b/todolist.css
@@ -53,14 +53,19 @@ form {
 form input {
     flex: 1;
     color: var(--textlineColor);
+    
 }
 
 form input, form button {
     border: none;
     outline: none;
     background: var(--background-secondaryColor);
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: 0.5rem;
+}
+
+form i {
+    font-size: 1.3rem;
 }
 
 form button {
@@ -95,4 +100,33 @@ form button:hover {
 .completed {
     text-decoration: line-through;
     opacity: 0.5;
+}
+
+select {
+    appearance: none;
+    border: none;
+    outline: none;
+    padding: 1rem;
+    background-color: var(--background-secondaryColor);
+    color: var(--whiteColor);
+    font-size: 1rem;
+    width: 100%;
+}
+
+.select {
+    margin-left: 1rem;
+    position: relative;
+    width: 10rem;
+}
+
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    font-size: 0.9rem;
+    color: var(--secondaryColor);
+    cursor: pointer;
+    pointer-events: none;
 }
